deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pacman
  labels:
    app: pacman
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: pacman
    deployment: pacman
