deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacman
  labels:
    app: pacman
spec:
  to:
    kind: Service
    name: pacman
    weight: 100
  port:
    targetPort: 8080-tcp
